@@ -1,5 +1,8 @@
 Version 0.2.0 (2014-xx-xx)
 --------------------------
+Changed track screen view to use an unstructured event (#53) (TODO)
+Added ability to name individual instances of the Python Tracker (#52) (TODO)
+Validate GET payload in all integration tests (#33) (TODO)
 Added support for Python 3.2 (#41) (TODO)
 Added support for Python 2.7 (#42) (TODO)
 Fixed versions in requirements.txt (#47)
